# ChangeLog for perl-core/ExtUtils-CBuilder
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.7 2009/07/07 02:14:28 jer Exp $

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org>
  ExtUtils-CBuilder-0.23.ebuild:
  Stable for HPPA too.

*ExtUtils-CBuilder-0.26.02 (05 Jul 2009)

  05 Jul 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.26.02.ebuild:
  Version bump

*ExtUtils-CBuilder-0.26.01 (03 Jul 2009)

  03 Jul 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.26.01.ebuild:
  Version bump

*ExtUtils-CBuilder-0.26 (30 Jun 2009)

  30 Jun 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.26.ebuild:
  Version bump

*ExtUtils-CBuilder-0.25 (27 Jun 2009)

  27 Jun 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.25.ebuild:
  Version bump

  11 Jan 2009; Torsten Veller <tove@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild:
  Remove Module-Build from RDEPEND (#246942)

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +ExtUtils-CBuilder-0.19.ebuild, +ExtUtils-CBuilder-0.23.ebuild,
  +ExtUtils-CBuilder-0.24.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild, ExtUtils-CBuilder-0.23.ebuild,
  ExtUtils-CBuilder-0.24.ebuild:
  New virtuals: module-build

  15 Sep 2008; Torsten Veller <tove@gentoo.org>
  -ExtUtils-CBuilder-0.15.ebuild, -ExtUtils-CBuilder-0.18.ebuild:
  Cleanup

*ExtUtils-CBuilder-0.24 (23 Aug 2008)

  23 Aug 2008; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.24.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-CBuilder-0.23.ebuild:
  alpha/ia64/sparc/x86 stable

*ExtUtils-CBuilder-0.23 (30 Apr 2008)

  30 Apr 2008; Torsten Veller <tove@gentoo.org>
  +ExtUtils-CBuilder-0.23.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  ExtUtils-CBuilder-0.19.ebuild: