@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/ExtUtils-CBuilder
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.7 2009/07/07 02:14:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.8 2009/07/20 07:41:55 tove Exp $
+
+*ExtUtils-CBuilder-0.26.03 (20 Jul 2009)
+
+  20 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-CBuilder-0.26.03.ebuild:
+  Version bump
 
   07 Jul 2009; Jeroen Roovers <jer@gentoo.org>
   ExtUtils-CBuilder-0.23.ebuild:
